--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body::-webkit-scrollbar {
+  background-color: black;
+  width: 10px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+body::-webkit-scrollbar-thumb {
+  @apply bg-gray-200;
+  width: 10px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+body *::-webkit-scrollbar {
+  background-color: black;
+  width: 5px;
+}
+
+body *::-webkit-scrollbar-thumb {
+  @apply bg-gray-300;
+  width: 5px;
+}
+
+textarea::-webkit-scrollbar {
+  width: 3px;
+}
+
+::selection {
+  background-color: rgb(50, 50, 50);
+  color: white;
 }
